# adventofcode2025

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: clang-linux.cmake  day_utility.cmake  linux.cmake
day01/: CMakeLists.txt  main.cpp
day02/: CMakeLists.txt  main.cpp
day03/: CMakeLists.txt  main.cpp
day04/: CMakeLists.txt  main.cpp
day05/: CMakeLists.txt  main.cpp
day06/: CMakeLists.txt  main.cpp
day07/: CMakeLists.txt  main.cpp
day08/: CMakeLists.txt  main.cpp
day09/: CMakeLists.txt  main.cpp
day10/: CMakeLists.txt  main.cpp
day11/: CMakeLists.txt  main.cpp
day12/: CMakeLists.txt  main.cpp
utility/: CMakeLists.txt  utility.cppm  utility.hpp
