cmake_minimum_required (VERSION 3.30)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_SCAN_FOR_MODULES ON)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

project ("adventofcode2025" LANGUAGES CXX)

include(FetchContent)
include(day_utility)

FetchContent_Declare( fmt
GIT_REPOSITORY "https://github.com/fmtlib/fmt.git"
GIT_TAG 12.1.0
)
set(FMT_MODULE ON)
FetchContent_MakeAvailable(fmt)

FetchContent_Declare( scn
GIT_REPOSITORY "https://github.com/eliaskosunen/scnlib.git"
GIT_TAG master
)
set(SCN_TESTS OFF)
set(SCN_BENCHMARKS OFF)
set(SCN_MODULES ON)
set(SCN_DISABLE_FAST_FLOAT ON)
FetchContent_MakeAvailable(scn)

find_package(Threads REQUIRED)

file(GLOB TEST_INPUT_FILES LIST_DIRECTORIES false CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/input/*.txt)
file(COPY ${TEST_INPUT_FILES} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/input)

add_subdirectory("utility")
add_subdirectory("day01")
#add_subdirectory("day02")
#add_subdirectory("day03")
#add_subdirectory("day04")
#add_subdirectory("day05")
#add_subdirectory("day06")
#add_subdirectory("day07")
#add_subdirectory("day08")
#add_subdirectory("day09")
#add_subdirectory("day10")
#add_subdirectory("day11")
#add_subdirectory("day12")
